--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,6 +13,7 @@
         layout="@layout/app_bar_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <include layout="@layout/content_home" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
