--- a/app/src/main/res/layout/content_listaprodutos.xml
+++ b/app/src/main/res/layout/content_listaprodutos.xml
@@ -3,316 +3,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/fundotelalogin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="snackapp.com.br.snackapp.MainActivity">
 
+
     <LinearLayout
+        android:id="@+id/login"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="75px"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        >
+        android:background="@drawable/fundoll"
+        android:orientation="vertical"
+        android:textAlignment="center">
 
-        <LinearLayout
+        <!-- Texto e logo-->
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="150px"
+            android:background="@drawable/menulanchonetelogo"
+            android:gravity="center"
+            android:text="MENU LANCHONETE"
+            android:textAlignment="textStart"
+            android:textColor="#ffffff"
+            android:textSize="29dp"
+            android:textStyle="bold|italic" />
+
+
+        <!-- Texto Cardapio-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#f22a00"
+            android:gravity="center"
+            android:text="@string/txtCardapio"
             android:textAlignment="center"
-            android:layout_gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="35dp"
+            android:textStyle="bold|italic" />
 
-            android:id="@+id/login"
-            android:background="@drawable/fundoll"
-            android:orientation="vertical">
-
-
-            <View
-                android:layout_width="1px"
-                android:layout_height="18px"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+        <RelativeLayout
+            android:layout_width="290dp"
+            android:layout_height="320dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="50dp">
 
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="150px"
-                    android:text="MENU LANCHONETE"
-                    android:gravity="center"
-                    android:textStyle="bold|italic"
-                    android:background="@drawable/menulanchonetelogo"
-                    android:textSize="29dp"
-                    android:textColor="#ffffff"
-                    android:textAlignment="textStart"/>
-
-
-            </LinearLayout>
-
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#ffffff"
-                android:textAlignment="center"
-                android:gravity="center"
-                android:textSize="35dp"
-                android:textStyle="bold|italic"
-                android:background="#f22a00"
-                android:text="@string/txtCardapio"/>
-
-            <View
-                android:layout_width="15dp"
-                android:layout_height="35dp"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <ListView
+                android:id="@+id/listP"
+                android:layout_width="180dp"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_marginLeft="70dp"
+                android:textAlignment="center" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-
-                    <CheckBox
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <CheckBox
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <CheckBox
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <CheckBox
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <CheckBox
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"                        android:text=""
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-
-                    <View
-                        android:layout_width="1in"
-                        android:layout_height="0.71in"/>
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.15in"
-
-                        android:text="@string/BtnValorTotal"/>
-
-
-
-
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="29dp"
-                    android:layout_height="0dp"/>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    >
-
-
-                    <Button
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"
-                        android:background="#f22a00"
-                        android:text="R$"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <Button
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"
-                        android:text="R$"
-                        />
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <Button
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"
-                        android:text="R$"
-
-                        />
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <Button
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"
-                        android:text="R$"
-
-                        />
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <Button
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"
-                        android:text="R$"
-
-                        />
-
-                    <View
-                        android:layout_width="1in"
-                        android:layout_height="0.71in"/>
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.15in"
-                        android:onClick="confirmarPedido"
-
-                        android:text="@string/BtnConfirmar"/>
-
-
-
-
-
-
-
-
-                </LinearLayout>
-
-
-
-
-
-
-
-
-
-
-            </LinearLayout>
-
-
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="#00FF00"
-                    android:textColor="#ffffff"
-                    android:textSize="30dp"
-                    android:onClick="confirmarCancelamento"
-                    android:textStyle="bold|italic"
-                    android:text="@string/txtSim"/>
-
-                <View
-                    android:layout_width="0.3in"
-                    android:layout_height="1px"/>
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="#00FF00"
-                    android:textColor="#ffffff"
-                    android:textSize="30dp"
-                    android:onClick="NegarCancelamento"
-                    android:textStyle="bold|italic"
-                    android:text="@string/txtNao"/>
-
-
-
-
-
-
-        </LinearLayout>
-
-
+        </RelativeLayout>
 
 
     </LinearLayout>
+
+
 </RelativeLayout>
