--- a/app/src/main/res/layout/content_fazerpedido.xml
+++ b/app/src/main/res/layout/content_fazerpedido.xml
@@ -9,12 +9,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="75px"
-        android:layout_gravity="center"
-        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,6 +22,7 @@
 
             <TextView
                 android:layout_width="match_parent"
+                android:id="@+id/textRealPed"
                 android:layout_height="45dp"
                 android:textAlignment="textStart"
                 android:gravity="center"
@@ -37,180 +32,40 @@
                 android:background="@drawable/logorealizarpedido"
                 android:textStyle="bold|italic"/>
 
-            <View
-                android:layout_width="0.2in"
-                android:layout_height="0.1in"/>
+            <RelativeLayout
+                android:layout_width="290dp"
+                android:layout_height="320dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="50dp">
 
 
+                <ListView
+                    android:id="@+id/listE"
+                    android:layout_width="180dp"
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Selecionar Campus"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:textSize="0.155in"
-                android:background="#FAFAFA"/>
-
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="0.8in">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_marginLeft="70dp"
+                    android:textAlignment="center" />
 
-                    <RadioButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Item 1"
-                        android:textColor="#DCDCDC"
-                        android:textSize="0.15in"
-                        android:background="#fffffc"/>
-
-                    <RadioButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Item 2"
-                        android:textColor="#c0c0c0"
-                        android:textSize="0.15in"
-                        android:background="#DCDCDC"/>
-                    <RadioButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Item 3"
-                        android:textColor="#DCDCDC"
-                        android:textSize="0.15in"
-                        android:background="#fffffc"/>
-                    <RadioButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Item 4"
-                        android:textColor="#c0c0c0"
-                        android:textSize="0.15in"
-                        android:background="#dcdcdc"/>
-
-
-
-
-
-                </LinearLayout>
-
-
-
-
-
-
-
-
-            </ScrollView>
-
-
-
-
-
-            <View
-                android:layout_width="0.2in"
-                android:layout_height="0.1in"/>
-
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Selecionar Lanchonete"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:textSize="0.156in"
-                android:background="#FAFAFA"/>
-
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="0.8in">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <RadioButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Item 1"
-                        android:textColor="#DCDCDC"
-                        android:textSize="0.15in"
-                        android:background="#fffffc"/>
-
-                    <RadioButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Item 2"
-                        android:textColor="#c0c0c0"
-                        android:textSize="0.15in"
-                        android:background="#DCDCDC"/>
-                    <RadioButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Item 3"
-                        android:textColor="#DCDCDC"
-                        android:textSize="0.15in"
-                        android:background="#fffffc"/>
-                    <RadioButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Item 4"
-                        android:textColor="#c0c0c0"
-                        android:textSize="0.15in"
-                        android:background="#dcdcdc"/>
-
-
-
-
-
-                </LinearLayout>
-
-
-
-
-
-
-
-
-            </ScrollView>
-
-            <View
-                android:layout_width="1px"
-                android:layout_height="10dp"/>
-
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#00FF00"
-                android:textColor="#ffffff"
-                android:textStyle="bold"
-                android:textSize="0.2in"
-                android:layout_marginLeft="109dp"
-                android:onClick="proximo"
-                android:text="@string/BtnProximo"/>
+            </RelativeLayout>
 
 
 
         </LinearLayout>
-
-
-
-
-
-
-
-    </LinearLayout>
-
-
-
+    <Button
+        android:id="@+id/button"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="450dp"
+        android:layout_marginStart="95dp"
+        android:background="#00FF00"
+        android:onClick="proximo"
+        android:text="@string/BtnProximo"
+        android:textColor="#ffffff"
+        android:textSize="0.2in"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
