--- a/app/src/main/res/layout/content_listaprodutos.xml
+++ b/app/src/main/res/layout/content_listaprodutos.xml
@@ -60,6 +60,22 @@
                 android:textAlignment="center" />
 
         </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="200dp"
+            android:layout_marginLeft="40dp"
+            android:layout_height="50dp">
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="84dp"
+                android:onClick="confirmarPedido"
+                android:text="Confirmar Pedido" />
+
+        </RelativeLayout>
 
 
     </LinearLayout>
