--- a/app/src/main/res/layout/xxx.xml
+++ b/app/src/main/res/layout/xxx.xml
@@ -7,8 +7,7 @@
     android:background="@drawable/fundotelalogin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="snackapp.com.br.snackapp.MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,138 +18,79 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_gravity="center"
 
-            android:id="@+id/login"
             android:background="@drawable/fundoll"
             android:orientation="vertical">
 
 
-            <View
-                android:layout_width="1px"
-                android:layout_height="18px"
-                />
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="45dp"
+                android:textAlignment="textStart"
+                android:gravity="center"
+                android:text="REALIZAR PEDIDO"
+                android:textSize="0.19in"
+                android:textColor="#ffffff"
+                android:background="@drawable/logorealizarpedido"
+                android:textStyle="bold|italic"/>
 
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="150px"
-                    android:text="MENU LANCHONETE"
-                    android:gravity="center"
-                    android:textStyle="bold|italic"
-                    android:background="@drawable/menulanchonetelogo"
-                    android:textSize="29dp"
-                    android:textColor="#ffffff"
-                    android:textAlignment="textStart"/>
-
-
-            </LinearLayout>
+            <View
+                android:layout_width="0.2in"
+                android:layout_height="0.1in"/>
 
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#ffffff"
+                android:text="Selecionar Campus"
                 android:textAlignment="center"
-                android:gravity="center"
-                android:textSize="35dp"
-                android:textStyle="bold|italic"
-                android:background="#f22a00"
-                android:text="@string/txtCardapio"/>
+                android:textColor="#000000"
+                android:textSize="0.155in"
+                android:background="#FAFAFA"/>
 
-            <View
-                android:layout_width="15dp"
-                android:layout_height="35dp"/>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0.8in">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-
-                    <CheckBox
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <CheckBox
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <CheckBox
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <CheckBox
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <CheckBox
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"                        android:text=""
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-
-                    <View
-                        android:layout_width="1in"
-                        android:layout_height="0.71in"/>
-
-                    <Button
-                        android:layout_width="wrap_content"
+                    <RadioButton
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
+                        android:text="Item 1"
+                        android:textColor="#DCDCDC"
                         android:textSize="0.15in"
+                        android:background="#fffffc"/>
 
-                        android:text="@string/BtnValorTotal"/>
+                    <RadioButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Item 2"
+                        android:textColor="#c0c0c0"
+                        android:textSize="0.15in"
+                        android:background="#DCDCDC"/>
+                    <RadioButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Item 3"
+                        android:textColor="#DCDCDC"
+                        android:textSize="0.15in"
+                        android:background="#fffffc"/>
+                    <RadioButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Item 4"
+                        android:textColor="#c0c0c0"
+                        android:textSize="0.15in"
+                        android:background="#dcdcdc"/>
 
 
 
@@ -158,108 +98,73 @@
 
                 </LinearLayout>
 
-                <View
-                    android:layout_width="29dp"
-                    android:layout_height="0dp"/>
 
+
+
+
+
+
+
+            </ScrollView>
+
+
+
+
+
+            <View
+                android:layout_width="0.2in"
+                android:layout_height="0.1in"/>
+
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Selecionar Lanchonete"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="0.156in"
+                android:background="#FAFAFA"/>
+
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0.8in">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
 
-
-                    <Button
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"
-                        android:background="#f22a00"
-                        android:text="R$"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"/>
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <Button
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"
-                        android:text="R$"
-                        />
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <Button
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"
-                        android:text="R$"
-
-                        />
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <Button
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"
-                        android:text="R$"
-
-                        />
-
-                    <View
-                        android:layout_width="15dp"
-                        android:layout_height="5dp"/>
-
-                    <Button
-
-                        android:layout_width="1in"
-                        android:layout_height="25dp"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
-                        android:textSize="0.1in"
-                        android:text="R$"
-
-                        />
-
-                    <View
-                        android:layout_width="1in"
-                        android:layout_height="0.71in"/>
-
-                    <Button
-                        android:layout_width="wrap_content"
+                    <RadioButton
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#f22a00"
-                        android:textStyle="bold|italic"
-                        android:textColor="#f5f4f4"
+                        android:text="Item 1"
+                        android:textColor="#DCDCDC"
                         android:textSize="0.15in"
-                        android:onClick="confirmarPedido"
+                        android:background="#fffffc"/>
 
-                        android:text="@string/BtnConfirmar"/>
-
-
-
+                    <RadioButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Item 2"
+                        android:textColor="#c0c0c0"
+                        android:textSize="0.15in"
+                        android:background="#DCDCDC"/>
+                    <RadioButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Item 3"
+                        android:textColor="#DCDCDC"
+                        android:textSize="0.15in"
+                        android:background="#fffffc"/>
+                    <RadioButton
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Item 4"
+                        android:textColor="#c0c0c0"
+                        android:textSize="0.15in"
+                        android:background="#dcdcdc"/>
 
 
 
@@ -274,38 +179,23 @@
 
 
 
-
-
-            </LinearLayout>
-
-
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#00FF00"
-                android:textColor="#ffffff"
-                android:textSize="30dp"
-                android:onClick="confirmarCancelamento"
-                android:textStyle="bold|italic"
-                android:text="@string/txtSim"/>
+            </ScrollView>
 
             <View
-                android:layout_width="0.3in"
-                android:layout_height="1px"/>
+                android:layout_width="1px"
+                android:layout_height="10dp"/>
+
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#00FF00"
                 android:textColor="#ffffff"
-                android:textSize="30dp"
-                android:onClick="NegarCancelamento"
-                android:textStyle="bold|italic"
-                android:text="@string/txtNao"/>
-
-
-
+                android:textStyle="bold"
+                android:textSize="0.2in"
+                android:layout_marginLeft="109dp"
+                android:onClick="proximo"
+                android:text="@string/BtnProximo"/>
 
 
 
@@ -314,5 +204,13 @@
 
 
 
+
+
+
     </LinearLayout>
+
+
+
+
+
 </RelativeLayout>
